# emotion-classifier

./: Emotion_Finetuning.ipynb  README.md  main.py  pyproject.toml
