[project]
name = "emotion-classifier-finetuning"
version = "0.1.0"
description = "Model that classifies the emotion of a given text"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "streamlit>=1.51.0",
    "transformers[torch]>=4.57.1",
]
